# IE-UBB-AN-I-2025-2026-OOP-SEMINAR-3-WAVE-

./: .gitignore.txt  CMakeLists.txt  DynamicArray.h  DynamicArray.tpp  MorseEncoder.cpp  MorseEncoder.h  README.md  README.md.txt  Rickroll.cpp  Rickroll.h  Seminar 3.vcxproj  Seminar 3.vcxproj.filters  SignalProcessor.cpp  SignalProcessor.h  Silence.cpp  Silence.h  Wave.cpp  Wave.h  main.cpp  morse.txt  rickroll.csv  robot.csv  to_wav.py  tremolo.csv
Repository/: Repo.h  massage.h
html/: _dynamic_array_8h.html  _dynamic_array_8h.js  _dynamic_array_8h_source.html  _rickroll_8cpp.html  _rickroll_8cpp.js  _rickroll_8h.html  _rickroll_8h.js  _rickroll_8h_source.html  _wave_8cpp.html  _wave_8cpp.js  _wave_8h.html  _wave_8h.js  _wave_8h_source.html  annotated.html  annotated_dup.js  class_acoustic_wave-members.html  class_acoustic_wave.html  class_acoustic_wave.js  class_dynamic_array-members.html  class_dynamic_array.html  class_dynamic_array.js  class_sawtooth_wave-members.html  class_sawtooth_wave.html  class_sawtooth_wave.js  class_sine_wave-members.html  class_sine_wave.html  class_sine_wave.js  class_square_wave-members.html  class_square_wave.html  class_square_wave.js  class_synthesizer_track-members.html  class_synthesizer_track.html  class_synthesizer_track.js  class_triangle_wave-members.html  class_triangle_wave.html  class_triangle_wave.js  class_wave_output-members.html  class_wave_output.html  classes.html  doxygen_crawl.html  (+13 more)
latex/: _dynamic_array_8h.tex  _dynamic_array_8h_source.tex  _rickroll_8cpp.tex  _rickroll_8h.tex  _rickroll_8h_source.tex  files.tex  (+20 more)
(+41 files in other folders)
